采用inBitmap 缓解频繁gc 增加从asset目录中获取帧动画 增加从storage目录中获取帧动画

--- a/AnimationLibrary/src/main/AndroidManifest.xml
+++ b/AnimationLibrary/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="catt.animation">
 
-    <uses-permission android:name="android.permission._THREAD_PRIORITY"/>
+    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
 
 </manifest>
