--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.3.11'
-    ext.kotlin_version = '1.3.10'
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
@@ -18,6 +20,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
     }
